--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ html{
       scroll-behavior: smooth;
       scroll-padding: 5rem;
       background-image: url('./Images/bg.jpg');
+      background-attachment: fixed!important;
       background-size: cover;
+      background-position: center;
       background-repeat: no-repeat;
-      background-attachment: fixed;
+     
       
 
 }
