--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body,
 html{
       margin: 0;
       padding: 0;
-      min-height: 100vh;
+      min-height: 100vh!important;
       width: 100vw;
       overflow-x: hidden;
       box-sizing: border-box;
@@ -14,7 +14,7 @@ html{
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-     
+      height:100vh;
       
 
 }
