--- a/style.css
+++ b/style.css
@@ -3,39 +3,31 @@ body,
 html{
       margin: 0;
       padding: 0;
-      min-height: 100vh!important;
+      min-height: 100vh;
       width: 100vw;
       overflow-x: hidden;
       box-sizing: border-box;
       scroll-behavior: smooth;
       scroll-padding: 5rem;
-      background-image: url('./Images/bg.jpg');
-      background-attachment: fixed!important;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height:100vh;
+      background-color: rgb(25, 25, 36)!important;
       
 
 }
+
 /* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
-  }
-  
-  /* Hide scrollbar for IE, Edge and Firefox */
-  body {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-    font-family: 'Merienda', cursive;
-    /* font-family: 'Poppins', sans-serif; */
-  }
+}
 
-
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
 
 nav{
-      background-color: rgba(255,255,255,0.1);
-      backdrop-filter: blur(10px);
+      background-color:rgb(25, 25, 36);
+      
       box-shadow: 0 2px 4px 0 rgba(0,0,0,.5);
       
 }
@@ -43,8 +35,8 @@ nav{
     color: white;
 }
 .nav-item .nav-link:hover{
-    color: lawngreen;
-    /* color: #fefefe; */
+    color: rgb(133, 76, 230);
+   
 }
 .hiimg{
     animation: waving-hand 2.5s infinite;
@@ -93,7 +85,7 @@ nav{
       font-family: 'Merienda', cursive;
   }
   .multiText{
-      color: lawngreen;
+      color: rgb(133, 76, 230);
       text-transform: capitalize;
   }
   #iam2{
@@ -109,19 +101,19 @@ nav{
       font-weight: 400;
       font-family: 'Merienda', cursive;
       color: #fff;
-      background-color: green;
+      background-image: linear-gradient(90deg, #d500ff 10%, #9200ff 90%);
       padding:  9px!important;
       margin: 1vw 1vw!important;
       text-transform: capitalize !important;
       box-shadow: 0 15px 10px rgba(0,0,0,0.4);
   }
 
-  button:hover{
-      background-color: rgb(10, 94, 10);
+button:hover{
+    background-image: linear-gradient(90deg, #9200ff 90%, #9200ff 90%);
   }
   p{  
       text-align: justify;
-      color: white;
+      color: rgb(177, 178, 179);
       font-size:medium;
       font-weight:bold;
       font-family: 'Merienda', cursive;
@@ -162,7 +154,7 @@ nav{
         height: 200px;
         width: 300px;
         overflow: hidden;
-        border: 3px solid  lawngreen;
+        border: 3px solid  rgb(133, 76, 230);
         border-radius: 20px;
         cursor: pointer;
     }
@@ -192,7 +184,7 @@ nav{
         right: 10px;
         font-size: 60px;
         font-weight: bolder;
-        color:  lawngreen;
+        color:  rgb(133, 76, 230);
         cursor: pointer;
         z-index: 100;
     }
@@ -207,7 +199,7 @@ nav{
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        border: 5px solid lawngreen;
+        border: 5px solid rgb(133, 76, 230);
         border-radius: 15px;
         width: 750px;
         object-fit: cover;
@@ -221,38 +213,11 @@ nav{
     }
 
   /* end of certificate cards */
-  .container2 .card1{
-    /* background-color: #22668D; */
-    background-color: rgba(255,255,255,0.1);
-    position: relative;
-    width: 100%;
-    height: 100%;
-    /* margin: 30px; */
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.5);
-    /* box-shadow: 20px 20px 50px rgba(0,0,0,0.5); */
-    border-radius: 15px ;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid rgba(255,255,255,0.1);
-    border-left: 1px solid rgba(255,255,255,0.1);
-    backdrop-filter: blur(5px);
-}
-
-.container2 .card1 .content{
-    /* padding: 20px; */
-    text-align: center;
-    /* transform: translateY(100px);
-    opacity: 0; */
-    transition: 0.5s ;
-}
-.container2 .card1 .content img{
-    height: 100px;
-    width: 100px;
-}
-
-
+  .card{
+    background-color: rgb(25, 25, 36)!important;
+    box-shadow: 0px 0px 6px 6px rgba(0,0,0,.3);
+  }
+ 
 
 /* Style for contact page */
 section{
@@ -268,16 +233,14 @@ section{
     position: relative;
     width: 410px;
     min-height: 400px;
-    background: rgba(255,255,255,0.1);
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    backdrop-filter: blur(5px);
-    box-shadow: 0 25px 45px rgb(0,0,0,0.1);
-    border: 1px solid rgb(255,255,255,0.5);
-    border-right: 1px solid rgb(255,255,255,0.2);
-    border-bottom: 1px solid rgb(255,255,255,0.2);
+    background-color: rgb(25, 25, 36)!important;
+    box-shadow: 0px 0px 6px 6px rgba(0,0,0,.3);
+    
+    
 }
 
 .form{
@@ -289,7 +252,7 @@ section{
 
 .form h2{
     position: relative;
-    color: lawngreen;
+    color: rgb(133, 76, 230);
     font-size: 30px;
     font-weight: 600;
     letter-spacing: 1px;
@@ -304,46 +267,44 @@ section{
     bottom: -10px;
     width: 80px;
     height: 4px;
-    background: lawngreen;
+    background: rgb(133, 76, 230);
 }
 
  .form .inputBx{
     width: 100%;
     margin-top: 20px;
+    border: none;
  }
 
  .form .inputBx input{
      width: 100%;
-     background: rgba(255,255,255,0.2);
-     border: none;
-     outline: none;
+     background-color: rgb(25, 25, 36)!important;
+    box-shadow: 0px 0px 6px 6px rgba(0,0,0,.3);
+    border: none;
      padding: 10px 20px;
      border-radius: 35px;
-     border: 1px solid rgb(255,255,255,0.5);
-     border-right: 1px solid rgb(255,255,255,0.2);
-     border-bottom: 1px solid rgb(255,255,255,0.2);
      font-size: 16px;
      letter-spacing: 1px;
-     color: lawngreen;
-     box-shadow: 0 5px 15px rgb(0,0,0,0.05);
+     color:  white;
  }
 
  .form .inputBx textarea{
-    width: 315px;
+    width: 100%;
     height: 140px;
     resize: none;
-    background: rgba(255,255,255,0.2);
+    background-color: rgb(25, 25, 36)!important;
+    box-shadow: 0px 0px 6px 6px rgba(0,0,0,.3);
     border: none;
-    outline: none;
     padding: 10px 20px;
     border-radius: 15px;
-    border: 1px solid rgb(255,255,255,0.5);
-    border-right: 1px solid rgb(255,255,255,0.2);
-    border-bottom: 1px solid rgb(255,255,255,0.2);
     font-size: 16px;
     letter-spacing: 1px;
-    color:  lawngreen!important;
-    box-shadow: 0 5px 15px rgb(0,0,0,0.05);
+    color:  white;
+    
+}
+.form .inputBx textarea::after{
+    border: none;
+    box-shadow: 0px 0px 6px 8px rgba(0,0,0,.3)!important;
 }
 
 .form .inputBx input::placeholder{
@@ -355,7 +316,8 @@ section{
 }
 
 .form .inputBx input[type="submit"]{
-    background: lawngreen;
+    /* background: rgb(133, 76, 230); */
+    background-image: linear-gradient(90deg, #d500ff 10%, #9200ff 90%);
     color: white;
     max-width: 150px;
     cursor: pointer;
@@ -366,7 +328,7 @@ section{
 }
 
 .form .inputBx input[type="submit"]:hover{
-    background: #450c7e;
+    background-image: linear-gradient(90deg, #9200ff 90%, #9200ff 90%);
     color: #fff;
     font-weight: 600;
 }
